--- a/src/app/Components/edit-details/edit-details.component.html
+++ b/src/app/Components/edit-details/edit-details.component.html
@@ -23,7 +23,7 @@
 
     <div class="d-flex flex-column justify-content-center" style="width: 25%; margin: 2% 0 1% 0">
       <label>Effective Start Date <span style="color: red">*</span></label>
-      <input type="date" class="input" style="width: 100%" [(ngModel)]="employeeESd" value="esd" />
+      <input type="date" class="input" style="width: 100%" [(ngModel)]="employeeESd" />
     </div>
 
     <div class="d-flex flex-column justify-content-center" style="width: 30%; margin: 2% 0 1% 0">
@@ -31,7 +31,7 @@
       <input type="date" style="margin-left: 8%" [value]="effectiveEndDate" />
     </div>
 
-    <button class="btn btn-primary animated" style="width: 9%; height: 9%; margin-top: 4%" (click)="submitDate()">
+    <button class="btn btn-primary animated" style="width: 9%; height: 9%; margin-top: 4%" (click)="submitDate(employeeESd)">
       <span class="text">Search</span>
     </button>
   </div>
@@ -41,16 +41,19 @@
     <!--------------------------------- Candidate/Employee update form ------------------------------->
 
     <div class="container-box">
+
       <div class="edit_view">
+
         <h3 style="margin: 2% 0 1% 3%">{{ updateForm.get("workerType")?.value === "Employee" ? "Employee Details :" : "Candidate Details :" }}</h3>
-        <select class="select-dropdown" (change)="onOptionChange($event)">
-          <option class="options" selected disabled>Edit options</option>
+
+        <select class="select-dropdown" [(ngModel)]="selectedValue" (change)="onOptionChange($event)">
+          <option class="options" selected disabled value="">Edit options</option>
           <option class="options" value="Update">Update</option>
           <option class="options" value="Correct">Correct</option>
-          <option class="options" value="DeleteRecord">Delete Record</option>
+          <!-- <option class="options" value="DeleteRecord">Delete Record</option> -->
         </select>
 
-        <button (click)="openModal('custom-modal-1')" class="btn btn-primary animated" style="height: 8%; width: 10%; margin-top: 2%; margin-right: 4%">
+        <button (click)="openModal('custom-modal-1')" class="btn btn-primary animated viewH" >
           <span style="cursor: pointer"><i class="fa-solid fa-clock-rotate-left"></i> View History</span>
         </button>
 
@@ -63,11 +66,11 @@
         <div class="form-row">
           <div class="form-group col-md-4">
             <label for="effectiveStartDate">Effective Start Date<span style="color: red">*</span>:</label>
-            <input type="date" id="effectiveStartDate" name="effectiveStartDate" class="form-control" formControlName="effectiveStartDate"/>
+            <input type="date" id="effectiveStartDate" name="effectiveStartDate" class="form-control" formControlName="effectiveStartDate" [readonly]="isReadOnly"/>
             <div *ngIf="updateForm?.get('effectiveStartDate')?.touched && updateForm?.get('effectiveStartDate')?.hasError('required')" class="text-danger ms-3">
               *Effective Start Date is required
             </div>
-            <div *ngIf="updateForm  .controls['effectiveStartDate'].hasError('invalidDate')" class="text-danger ms-3">
+            <div *ngIf="updateForm.controls['effectiveStartDate'].hasError('invalidDate')" class="text-danger ms-3">
               *Invalid Date (No Saturdays, Sundays)
             </div>
 
@@ -75,7 +78,7 @@
 
           <div class="form-group col-md-4">
             <label for="effectiveEndDate">Effective End Date:</label>
-            <input type="date" id="effectiveEndDate" name="effectiveEndDate" class="form-control" formControlName="effectiveEndDate" value="4712-12-31"/>
+            <input type="date" id="effectiveEndDate" name="effectiveEndDate" class="form-control" formControlName="effectiveEndDate" value="4712-12-31" [readonly]="isReadOnly"/>
           </div>
 
           <div class="form-group col-md-4">
@@ -207,7 +210,7 @@
 
         </div>
 
-        <div class="row">
+        <div class="row" [hidden]="updateForm.disabled">
 
           <div class="col" style="margin-bottom: 2%; text-align: center">
             <button type="submit" class="btn btn-primary animated" style="width: 8%; margin-right: 2%" role="button" >
@@ -251,7 +254,7 @@
 
   </div>
 
-  <div style="display: flex;align-items: center;justify-content: center;margin-bottom: 3%;margin-top: 1%;">
+  <div class="back-btn">
     <button class="btn btn-primary animated text-center" style="width: 150px; background-color: gray" routerLink="/landing">
       <span class="text">Back</span>
     </button>
@@ -266,10 +269,11 @@
 <jw-modal id="custom-modal-1">
   <button (click)="closeModal('custom-modal-1')" type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
   <hr />
-
   <h5 style="margin: 0 0 1% 2%">{{ updateForm.get("workerType")?.value }} details View History :</h5>
-
-  <table style="width: 100%; border-collapse: collapse; margin-top: 20px">
+  <div *ngIf="!waitForViewHistoryData">
+    <p class="history-error">No History</p>
+  </div>
+  <table style="width: 100%; border-collapse: collapse; margin-top: 20px" *ngIf="waitForViewHistoryData">
     <thead>
       <tr>
         <th class="table-head-styles">Effective Start Date</th>
@@ -279,7 +283,7 @@
         <th class="table-head-styles">Last Updated Date</th>
       </tr>
     </thead>
-    <tbody *ngIf="loadHistoryData">
+    <tbody>
       <tr *ngFor="let data of getEmpDataResult" class="single-rec">
         <td class="table-body-styles hover">
           <a (click)="empSearchViewHistory(data?.EFFECTIVE_START_DATE)">
@@ -304,19 +308,24 @@
 
 <div *ngIf="showUpdateModal" class="modal-overlay">
   <div class="modal-content">
-    <h5 style="padding: 20px 0">{{ updateForm.get("workerType")?.value }} Update details :</h5>
+    <h5>{{ updateForm.get("workerType")?.value }} Update details :</h5>
+    <p>Select the Effective Start Date to determine when it will take effect:</p>
     <form [formGroup]="updateForm2" class="form-fields">
       <div class="d-flex flex-row">
-        <div class="form-group" style="width: 300px; margin-left: 20px">
-          <label for="effectiveStartDate">Effective Start Date<span style="color: red; font-weight: bold">*</span>:</label>
-          <input type="date" id="effectiveStartDate" name="effectiveStartDate" class="form-control" formControlName="effectiveStartDate" />
-          <div *ngIf="updateForm2.get('effectiveStartDate')?.touched && updateForm2.get('effectiveStartDate')?.hasError('required')" class="text-danger">
+        <div class="form-align">
+          <label for="effectiveStartDateUpdate">Effective Start Date<span style="color: red; font-weight: bold">*</span>:</label>
+          <input type="date" id="effectiveStartDateUpdate" name="effectiveStartDateUpdate" class="form-control" formControlName="effectiveStartDateUpdate" />
+          <div *ngIf="updateForm2.get('effectiveStartDateUpdate')?.touched && updateForm2.get('effectiveStartDateUpdate')?.hasError('required')" class="text-danger">
             *Effective Start Date is required
           </div>
+          <div *ngIf="updateForm2.controls['effectiveStartDateUpdate'].hasError('invalidDate')" class="text-danger ms-3">
+            *Invalid Date (No Saturdays, Sundays)
+          </div>
+
         </div>
         <div class="button-container">
           <button type="button" class="submit-button" (click)="updateEffectiveStartDate()">
-            <span class="text">Update</span>
+            <span class="text">Select</span>
           </button>
           <button type="button" class="cancel" (click)="closeUpdateModel()">
             <span class="text">Cancel</span>
@@ -348,7 +357,7 @@
 <jw-modal id="custom-modal-11">
   <button (click)="closeModal('custom-modal-11')" type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
   <hr />
-  <app-EmergencyDetails *ngIf="isEmergencyDetailsOpen" [employeListData]="employeeList" [employeeStartDate]="employeeESd"/>
+  <app-EmergencyDetails *ngIf="isEmergencyDetailsOpen" [employeListData]="employeeList" [employeeStartDate]="employeeESd" />
 </jw-modal>
 
 <!----------------------------------------- Loading spinner ------------------------------------------------------>
