--- a/src/app/Components/EmergencyDetails/EmergencyDetails.component.html
+++ b/src/app/Components/EmergencyDetails/EmergencyDetails.component.html
@@ -3,14 +3,11 @@
     <div style="display: flex; flex-direction: row">
       <div class="d-flex flex-column" style="width: 30%; margin-left: 5%">
         <label>Date From:<span style="color: red">*</span></label>
-        <input type="date" class="form-control"
-        formControlName="Effectivestartdate"
-        [(ngModel)]="emergencyEsdDate"  (change)="esdChange($event)"
-       />
+        <input type="date" class="form-control" [(ngModel)]="emergencyEsdDate" />
        </div>
       <div class="d-flex flex-column" style="width: 30%; margin-left: -4%">
         <label>Date To:</label>
-        <input type="date" class="form-control" formControlName="Effectiveenddate" [(ngModel)]="emergencyEndDate"/>
+        <input type="date" class="form-control" [(ngModel)]="emergencyEndDate"/>
       </div>
       <button class="btn btn-primary sub-button animated" style="margin-left: -4%; margin-top: 3%" (click)="emergencysubmitdate()">
         <span class="text">Search</span>
