--- a/src/app/Components/view-employees/view-employees.component.css
+++ b/src/app/Components/view-employees/view-employees.component.css
@@ -1,7 +1,7 @@
 
 .main{
     background-color:#F5F5F5;
-    position: absolute;
+    position: fixed;
     top: 9%;
     height: 100vh;
     width: 100%;
